works well almost final version
