# apps/server/openapi.yaml
@@ -111,6 +111,41 @@ paths:
       x-amazon-apigateway-auth:
         type: AWS_IAM
 
+  /create/event:
+    post:
+      tags:
+        - create event
+      summary: create event
+      operationId: createEvent
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateEventRequest'
+      responses:
+        400:
+          description: bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        200:
+          description: ok
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CreateEventResponse'
+        500:
+          description: 'internal error'
+      x-amazon-apigateway-integration:
+        httpMethod: post
+        type: aws_proxy
+        uri:
+          Fn::Sub:
+            arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${CreateEventFunction.Arn}/invocations
+      x-amazon-apigateway-auth:
+        type: AWS_IAM
+
 components:
   schemas:
     CloseEventResponse:
@@ -119,6 +154,18 @@ components:
         status:
           type: string
     CloseEventRequest:
+      type: object
+      properties:
+        eventId:
+          type: string
+      required:
+        - eventId
+    CreateEventResponse:
+      type: object
+      properties:
+        status:
+          type: string
+    CreateEventRequest:
       type: object
       properties:
         eventId:
