# apps/server/src/handlers/create-event.ts
@@ -1,16 +1,16 @@
 import { APIGatewayProxyEvent, APIGatewayProxyResult, Context } from "aws-lambda";
-import { AddUserToEvent } from "../app/types";
-import { subscribeUserToEvent } from "../app/subscribe-user-to-event/add-new-user-to-event";
+import { CreateEventBody } from "../app/types";
+import { CreateEvent } from "../app/create-event/create-event-and-images-collection";
 import { initAws } from "../services/init-aws";
 
 export const handler = async (event: APIGatewayProxyEvent, context: Context): Promise<APIGatewayProxyResult> => {
   await initAws();
 
   try {
-    console.log(`Run add-user-to-event-handler - ${JSON.stringify(event.body)}`);
-    const body: AddUserToEvent  = JSON.parse(event.body);
-    const res = await subscribeUserToEvent(body);
-    console.log(`End add-user-to-event-handler`, event);
+    console.log(`Run create-event-handler - ${JSON.stringify(event.body)}`);
+    const body: CreateEventBody = JSON.parse(event.body);
+    const res = await CreateEvent(body.eventId);
+    console.log(`End create-event-handler`, event);
 
     return {
       statusCode: 200,
@@ -22,7 +22,7 @@ export const handler = async (event: APIGatewayProxyEvent, context: Context): Pr
       body: JSON.stringify(res),
     };
   } catch (error) {
-    console.log(`Failed to run add-user-to-event-handler - ${error}`, JSON.stringify(event));
+    console.log(`Failed to run create-event-handler - ${error}`, JSON.stringify(event.body));
     throw error;
   }
 };
